# robarma

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
docs/doxygen-awesome/: DOXY_MAINPAGE.md
include/: arma.hpp  bip.hpp  bip_s.hpp  bmm.hpp  estimation_result.hpp  estimators.hpp  ftau.hpp  hr.hpp  logging.hpp  mle.hpp  mm.hpp  ols.hpp  robust.hpp  s.hpp  sigma.hpp  simulate.hpp  solver.hpp  tau.hpp  ts.hpp
tests/: test_main.cpp  test_numerical_stability.cpp
